--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -53,7 +53,7 @@
 <body>
     <h1>Terms of Service</h1>
     <div class="meta">
-        <strong>Last updated:</strong> November 2024<br>
+        <strong>Last updated:</strong> January 2026<br>
         <strong>App:</strong> FilmStock
     </div>
 
@@ -68,8 +68,18 @@
     </div>
 
     <div class="section">
-        <h2>3. App Purpose</h2>
-        <p>FilmStock is designed to help you manage your analog film stock inventory, track loaded films in your cameras, and organize your collection. The App is provided for informational and organizational purposes only.</p>
+        <h2>3. App Purpose and Features</h2>
+        <p>FilmStock is designed to help you:</p>
+        <ul>
+            <li>Manage your analog film stock inventory</li>
+            <li>Track films loaded in your cameras with custom ISO settings</li>
+            <li>Record finished rolls and track development status</li>
+            <li>Organize your collection with filtering and sorting</li>
+            <li>Take or select photos of your film boxes for reference</li>
+            <li>View loaded films via home screen widgets</li>
+            <li>Manage cameras and shooting history</li>
+        </ul>
+        <p>The App is provided for informational and organizational purposes only.</p>
     </div>
 
     <div class="section">
@@ -79,70 +89,126 @@
             <li>Maintaining the accuracy of information you enter</li>
             <li>Backing up your data (all data is stored locally)</li>
             <li>Ensuring the security of your device</li>
-            <li>Using the camera feature responsibly and lawfully</li>
+            <li>Using the camera and photo library features responsibly and lawfully</li>
+            <li>Respecting the intellectual property rights of film manufacturers when taking photos</li>
+            <li>Compliance with applicable laws when photographing film boxes or materials</li>
         </ul>
     </div>
 
     <div class="section">
         <h2>5. Data and Backups</h2>
         <p>All data is stored locally on your device. We do not provide cloud backup services. You are solely responsible for backing up your device to preserve your data. Loss of data due to device loss, damage, or app deletion is not our responsibility.</p>
+        <p>Data stored locally includes:</p>
+        <ul>
+            <li>Film inventory and custom notes</li>
+            <li>Custom photos taken with the camera or selected from your library</li>
+            <li>Loading and finishing records</li>
+            <li>Camera information</li>
+            <li>Development status tracking</li>
+            <li>App settings and preferences</li>
+        </ul>
     </div>
 
     <div class="section">
-        <h2>6. In-App Purchases</h2>
+        <h2>6. Camera and Photo Library Access</h2>
+        <p>The App requests permission to access your device's camera and photo library to allow you to:</p>
+        <ul>
+            <li>Take photos of your film boxes</li>
+            <li>Select existing photos from your library</li>
+            <li>Crop and edit images for use in the app</li>
+        </ul>
+        <p>These permissions are optional. You can deny them and still use core features. All photos are processed and stored locally on your device and are never uploaded or transmitted.</p>
+    </div>
+
+    <div class="section">
+        <h2>7. In-App Purchases</h2>
         <p>FilmStock offers an optional in-app purchase ("Buy Me a Coffee") to support development:</p>
         <ul>
             <li>Purchases are processed through Apple's App Store</li>
             <li>Payments are non-refundable except as required by law</li>
             <li>Purchases do not unlock additional features</li>
             <li>Purchases support ongoing app development and maintenance</li>
+            <li>All features remain free regardless of purchase</li>
         </ul>
     </div>
 
     <div class="section">
-        <h2>7. Intellectual Property</h2>
+        <h2>8. Intellectual Property</h2>
         <p>The App, including its design, features, code, and content, is owned by Jonas Halbe and protected by copyright and other intellectual property laws. You may not copy, modify, distribute, or reverse engineer the App.</p>
+        <p>Film brand names, trademarks, and logos referenced in the App are the property of their respective owners. FilmStock is not affiliated with, endorsed by, or sponsored by any film manufacturer.</p>
     </div>
 
     <div class="section">
-        <h2>8. Disclaimer of Warranties</h2>
-        <p>THE APP IS PROVIDED "AS IS" WITHOUT WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED. WE DO NOT WARRANT THAT THE APP WILL BE ERROR-FREE, UNINTERRUPTED, OR FREE FROM HARMFUL COMPONENTS.</p>
+        <h2>9. User-Generated Content</h2>
+        <p>Photos you take or select for use in the App remain your property. By using the App, you confirm that:</p>
+        <ul>
+            <li>You have the right to use any photos you add to the App</li>
+            <li>Your photos do not infringe on any third-party rights</li>
+            <li>You are solely responsible for the content of your photos</li>
+        </ul>
+        <p>Since all data is stored locally and never transmitted, we do not monitor or moderate user-generated content.</p>
     </div>
 
     <div class="section">
-        <h2>9. Limitation of Liability</h2>
-        <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, WE SHALL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, OR ANY LOSS OF PROFITS OR REVENUES, WHETHER INCURRED DIRECTLY OR INDIRECTLY, OR ANY LOSS OF DATA, USE, OR OTHER INTANGIBLE LOSSES.</p>
+        <h2>10. Disclaimer of Warranties</h2>
+        <p>THE APP IS PROVIDED "AS IS" WITHOUT WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED. WE DO NOT WARRANT THAT THE APP WILL BE ERROR-FREE, UNINTERRUPTED, OR FREE FROM HARMFUL COMPONENTS. WE DO NOT GUARANTEE THE ACCURACY OF AUTOMATICALLY DETECTED FILM METADATA OR CATALOG IMAGES.</p>
     </div>
 
     <div class="section">
-        <h2>10. Updates and Changes</h2>
-        <p>We may update, modify, or discontinue the App at any time without notice. We may also update these Terms from time to time. Continued use of the App after changes constitutes acceptance of the updated Terms.</p>
+        <h2>11. Limitation of Liability</h2>
+        <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, WE SHALL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, OR ANY LOSS OF PROFITS OR REVENUES, WHETHER INCURRED DIRECTLY OR INDIRECTLY, OR ANY LOSS OF DATA, USE, OR OTHER INTANGIBLE LOSSES RESULTING FROM:</p>
+        <ul>
+            <li>Your use or inability to use the App</li>
+            <li>Loss of data stored on your device</li>
+            <li>Inaccurate film information or metadata</li>
+            <li>Camera or photo library functionality issues</li>
+            <li>Widget display inaccuracies</li>
+        </ul>
     </div>
 
     <div class="section">
-        <h2>11. Termination</h2>
-        <p>You may stop using the App at any time by deleting it from your device. We reserve the right to terminate or restrict access to the App for any reason, including violation of these Terms.</p>
+        <h2>12. Updates and Changes</h2>
+        <p>We may update, modify, or discontinue the App or any features at any time without notice. We may also update these Terms from time to time. The "Last updated" date at the top indicates when changes were made. Continued use of the App after changes constitutes acceptance of the updated Terms.</p>
     </div>
 
     <div class="section">
-        <h2>12. Governing Law</h2>
-        <p>These Terms are governed by the laws of Norway, without regard to conflict of law principles.</p>
+        <h2>13. Termination</h2>
+        <p>You may stop using the App at any time by deleting it from your device. This will permanently delete all locally stored data. We reserve the right to terminate or restrict access to the App for any reason, including violation of these Terms.</p>
     </div>
 
     <div class="section">
-        <h2>13. Contact Information</h2>
-        <p>If you have questions about these Terms of Service, please contact us at <a href="mailto:hello@halbe.no">hello@halbe.no</a></p>
+        <h2>14. Third-Party Services</h2>
+        <p>The App integrates with Apple services including StoreKit, WidgetKit, SwiftData, AVFoundation, and PhotosUI. Use of these services is subject to Apple's terms and conditions.</p>
     </div>
 
     <div class="section">
-        <h2>14. Entire Agreement</h2>
+        <h2>15. Age Requirements</h2>
+        <p>The App is intended for general audiences. There is no minimum age requirement, but users under 13 should use the App with parental guidance, particularly when using camera features.</p>
+    </div>
+
+    <div class="section">
+        <h2>16. Governing Law</h2>
+        <p>These Terms are governed by the laws of Norway, without regard to conflict of law principles. Any disputes arising from these Terms or use of the App shall be subject to the exclusive jurisdiction of the courts of Norway.</p>
+    </div>
+
+    <div class="section">
+        <h2>17. Contact Information</h2>
+        <p>If you have questions about these Terms of Service, please contact us at <a href="mailto:jonas.halbe@cognitedata.com">jonas.halbe@cognitedata.com</a></p>
+    </div>
+
+    <div class="section">
+        <h2>18. Entire Agreement</h2>
         <p>These Terms constitute the entire agreement between you and FilmStock regarding use of the App and supersede all prior agreements and understandings.</p>
     </div>
 
+    <div class="section">
+        <h2>19. Severability</h2>
+        <p>If any provision of these Terms is found to be unenforceable or invalid, that provision will be limited or eliminated to the minimum extent necessary so that these Terms will otherwise remain in full force and effect.</p>
+    </div>
+
     <footer>
-        <p>&copy; 2024 Jonas Halbe. All rights reserved.</p>
-        <p><a href="privacy.html">Privacy Policy</a></p>
+        <p>&copy; 2026 Jonas Halbe. All rights reserved.</p>
+        <p><a href="privacy-policy.html">Privacy Policy</a> | <a href="support.html">Support</a></p>
     </footer>
 </body>
 </html>
-
