--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -53,7 +53,7 @@
 <body>
     <h1>Privacy Policy</h1>
     <div class="meta">
-        <strong>Last updated:</strong> January 2026<br>
+        <strong>Last updated:</strong> February 2026<br>
         <strong>App:</strong> FilmStock
     </div>
 
@@ -64,22 +64,27 @@
 
     <div class="section">
         <h2>Data Collection</h2>
-        <p><strong>FilmStock does NOT collect, transmit, or share any personal information.</strong> All data you create in the app remains exclusively on your device.</p>
+        <p><strong>FilmStock does NOT collect, transmit, or share any personal information.</strong> All data you create in the app is stored exclusively on your device. We have no access to your data at any time.</p>
     </div>
 
     <div class="section">
         <h2>Information Stored Locally</h2>
         <p>The following information is stored locally on your device only:</p>
         <ul>
-            <li>Film stock inventory and details (manufacturer, type, format, speed, expiry dates, custom notes, comments)</li>
+            <li>Film stock inventory and details (manufacturer, type, format, speed, expiry dates, notes, roll counts, frozen status, exposure counts)</li>
             <li>Custom photos of film boxes taken with the camera or selected from your photo library</li>
-            <li>App settings and preferences (language, filters, sorting preferences, enabled formats)</li>
-            <li>Films loaded in your cameras with loading dates and custom ISO settings</li>
-            <li>Camera information (camera names and associated films)</li>
-            <li>Finished film records (completion dates and development status)</li>
+            <li>App settings and preferences (language, filters, sorting, enabled formats)</li>
+            <li>Films currently loaded in your cameras (loading dates, custom ISO settings, roll details)</li>
+            <li>Camera information (names, assigned film formats, associated films)</li>
+            <li>Finished film records (completion dates, development status, roll details)</li>
             <li>Widget configuration data</li>
         </ul>
         <p>This data is never transmitted to our servers or any third parties.</p>
+    </div>
+
+    <div class="section">
+        <h2>Export and Import</h2>
+        <p>FilmStock provides an optional Export &amp; Import feature (currently in beta) that allows you to export your film inventory as a JSON or CSV file. These files are created locally on your device and shared only through the standard iOS share sheet &mdash; you control exactly where they go. We do not receive copies of any exported files. Imported files are read locally and never transmitted.</p>
     </div>
 
     <div class="section">
@@ -100,6 +105,8 @@
             <li>Filtering and sorting of your film collection</li>
             <li>Widget data updates for the home screen</li>
             <li>Statistics calculations</li>
+            <li>Export file generation (JSON/CSV)</li>
+            <li>Import file parsing and validation</li>
         </ul>
         <p>No data is sent to external servers for processing.</p>
     </div>
@@ -124,7 +131,7 @@
 
     <div class="section">
         <h2>Data Sharing</h2>
-        <p>We do not share, sell, rent, or trade your information with anyone. Since all data is stored locally on your device, there is no data to share.</p>
+        <p>We do not share, sell, rent, or trade your information with anyone. Since all data is stored locally on your device, there is no data for us to share.</p>
     </div>
 
     <div class="section">
@@ -144,12 +151,12 @@
 
     <div class="section">
         <h2>Changes to This Policy</h2>
-        <p>We may update this Privacy Policy from time to time. Any changes will be reflected in the app with an updated "Last updated" date.</p>
+        <p>We may update this Privacy Policy from time to time. Any changes will be reflected with an updated "Last updated" date. Significant changes will be noted in the app's What's New section.</p>
     </div>
 
     <div class="section">
         <h2>Contact Us</h2>
-        <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:jonas.halbe@cognitedata.com">jonas.halbe@cognitedata.com</a></p>
+        <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:filmstock@halbe.app">filmstock@halbe.app</a></p>
     </div>
 
     <footer>
