updated htmls again

--- a/support.html
+++ b/support.html
@@ -514,7 +514,7 @@
             <h2>Contact Support</h2>
 
             <div class="contact-info">
-                <p><strong>Email:</strong> <a href="mailto:filmstock@halbe.app">filmstock@halbe.app</a></p>
+                <p><strong>Email:</strong> <a href="mailto:hello@halbe.no">hello@halbe.no</a></p>
                 <p><strong>Response Time:</strong> Within 24&ndash;48 hours on weekdays</p>
                 <p><strong>Languages:</strong> English, German, Norwegian</p>
             </div>
