--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -156,7 +156,7 @@
 
     <div class="section">
         <h2>Contact Us</h2>
-        <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:filmstock@halbe.app">filmstock@halbe.app</a></p>
+        <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:hello@halbe.no">hello@halbe.no</a></p>
     </div>
 
     <footer>
