--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -210,7 +210,7 @@
 
     <div class="section">
         <h2>18. Contact Information</h2>
-        <p>If you have questions about these Terms of Service, please contact us at <a href="mailto:filmstock@halbe.app">filmstock@halbe.app</a></p>
+        <p>If you have questions about these Terms of Service, please contact us at <a href="mailto:hello@halbe.no">hello@halbe.no</a></p>
     </div>
 
     <div class="section">
